# CozyEngine

./: .cursorrules  .gitignore  results_debug_failures.csv  results_debug_stats.csv  results_debug_stats_history.csv  results_final_failures.csv  results_final_stats.csv  results_final_stats_history.csv
backend/: .env.example  .gitignore  CONFIG.md  M1_TEST_REPORT.md  README.md  alembic.ini  init_db_script.py  pyproject.toml  verify_m0_2.py  verify_mock_engine.py
backend/alembic/: env.py
backend/alembic/versions/: a5e8420ede10_initial_schema_users_sessions_messages_.py
backend/app/: __init__.py  main.py
backend/app/api/: health.py
backend/app/api/compat/: personalities.py  (+3 more)
backend/app/context/: __init__.py  message_builder.py  models.py  service.py
backend/app/core/: exceptions.py
backend/app/engines/: __init__.py  base_remote.py  registry.py
backend/app/middleware/: __init__.py  errors.py  rate_limit.py  request_context.py  security.py
backend/app/observability/: __init__.py  logging.py
backend/app/orchestration/: __init__.py  chat.py
backend/app/realtime/: handler.py
backend/app/services/: audit.py  greyscale.py  worker.py
backend/app/storage/: database.py  models.py  queue.py  redis.py
backend/app/utils/: sanitize.py
backend/backend/backend/: test.db
backend/config/: api.yaml  app.yaml  context.yaml  engines.yaml  greyscale.yaml  observability.yaml  security.yaml  storage.yaml  tools.yaml
backend/config/personalities/: default.yaml  perf_test.yaml  restricted.yaml  test_personality.yaml
backend/docs/: BASE_URL_TEST_REPORT.md  M1_TEST_REPORT.md
backend/scripts/: setup_venv.sh
backend/tests/: run_m1_tests.py  test_ai_engines.py  test_async_queue.py  test_compat_api_routes.py  test_context_service.py  test_database.py  test_exceptions.py  test_health.py  test_middleware.py  test_orchestrator.py  test_orchestrator_tool_loop.py  test_personalities.py  test_personalization_engines.py  test_realtime.py  test_sanitize.py  test_tools_engine.py
backend/tests/core/: test_config.py
backend/tests/integration/: test_m1_integration.py
backend/tests/performance/: locustfile.py  results_2_failures.csv  results_2_stats.csv  results_2_stats_history.csv  results_3_failures.csv  results_3_stats.csv  results_3_stats_history.csv  results_4_failures.csv  results_4_stats.csv  results_4_stats_history.csv  results_5_failures.csv  results_5_stats.csv  results_5_stats_history.csv  results_6_failures.csv  results_6_stats.csv  results_6_stats_history.csv  results_failures.csv  results_stats.csv  results_stats_history.csv
(+81 files in other folders)
